# technical_test_httpx_py

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflow/: create_release.yml
.github/workflows/: create_release.yml  pre-commit.yml
test_httpx_async/: __init__.py  http_client.py
test_httpx_async/tests/: __init__.py  test_HttpClient.py
